[project]
name = "mute-bypass-by-id"
description = "2 custom nodes for Comfyui for muting or bypassing a node by node ID. They are widget linkable/promotable as a subgraph node switch, or can be used as a stand alone node. They can also mute/bypass in nested subgraphs by ID."
version = "1.0.11"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/pixelpainter/comfyui-mute-bypass-by-ID"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/pixelpainter/comfyui-mute-bypass-by-ID"
"Bug Tracker" = "https://github.com/pixelpainter/comfyui-mute-bypass-by-ID/issues"
license = { file = "LICENSE" }

[tool.comfy]
PublisherId = "pixelpainter"
DisplayName = "mute/bypass by ID"
Icon = ""
includes = ['js'] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

